Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/4980495/static/Test.out
Test.java:15:9: compiler.err.ref.ambiguous: f, kindname.variable, f, p1.A1, kindname.variable, f, p2.A2
1 error
